# SourceCodeGameTLBB

./: .gitattributes  .gitignore  README.md
Common/: Assertx.h  CampDataMgr.h  DB_Struct.cpp  DB_Struct.h  FileDataMgr.cpp  FileDataMgr.h  GameDefine.h  GameDefine_Attr.h  GameDefine_City.h  GameDefine_PlayerShop.h  GameDefine_Result.cpp  GameDefine_Scene.h  GameStruct.h  GameStruct_Camp.h  GameStruct_Finger.cpp  GameStruct_Impact.h  GameStruct_MinorPasswd.cpp  GameStruct_MinorPasswd.h  GameStruct_Pet.cpp  GameStruct_Pet.h  GameStruct_Script.cpp  GameStruct_Script.h  GameStruct_Skill.h  GameUtil.cpp  GameUtil.h  KeyDog.h  OResultDef.h  PacketDefine.h  PacketFactoryManager.cpp  PlayerStatus.h  Rand.h  ResultDefine.h  ShareMemAPI.h  SkillDataMgr.cpp
Common/Combat/: CampAndStand.h  TemplateManager.cpp  TemplateManager.h  readme.txt
Common/DBSystem/DataBase/: DBAbilityList.cpp  DBAbilityList.h  DBCharFullData.cpp  DBCharFullData.h  DBCharList.cpp  DBCharList.h  DBCoolDownInfo.cpp  DBCreateCharOp.cpp  DBCreateCharOp.h  DBDeleteCharOp.cpp  DBDeleteCharOp.h  DBEquipBaseList.cpp  DBEquipBaseList.h  DBGuildInfo.cpp  DBImpactList.h  DBInterface.cpp  DBItemList.cpp  DBItemList.h  DBPetList.cpp  DBPetList.h  DBPrivateInfo.cpp  DBPrivateInfo.h  DBSkillList.h  DBTitleInfo.h  DBWebShopInfo.cpp  DBWebShopInfo.h  DBXinFaList.cpp  ODBCInterface.cpp  ODBCInterface.h  SqlTemplate.cpp
Common/DataBase/: TLBB_DBC.h
Common/Net/: FileAPI.cpp  FileAPI.h  Packet.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketAPI.h  SocketInputStream.cpp  SocketInputStream.h  SocketOutputStream.h
Common/Packets/: BLRetAuth.h  BWConnect.h  BWValidateUser.h  CGAskActiveTimeUpdate.cpp  CGAskChangeScene.cpp  CGAskChangeScene.h  CGAskDetailAttrib.cpp  CGAskDetailAttrib.h  CGAskDetailEquipList.cpp  CGAskDetailSkillList.cpp  CGAskDetailXinFaList.h  CGAskItemInfo.cpp  CGAskItemInfo.h  CGAskJoinMenpai.cpp  CGAskJoinMenpai.h  CGAskLeanAbility.cpp  CGAskMail.cpp  CGAskMail.h  CGAskMissionDesc.h  CGAskMissionList.h  CGAskMyBagList.cpp  CGAskPrivateInfo.cpp  CGAskPrivateInfo.h  CGAskSetting.h  CGAskTeamFollow.cpp  CGAskTeamInfo.cpp  CGAskTeamInfo.h  CGAttack.h  CGBBSApply.cpp  CGBankAcquireList.h  CGBankAddItem.cpp  CGBankClose.cpp  CGBankRemoveItem.cpp  CGChannelCreate.h  CGChannelDismiss.h  CGChannelInvite.cpp  CGChannelInvite.h  CGChannelKick.h  CGCharAllTitles.cpp  CGCharAskEquipment.cpp  (+445 more)
Game/Client/: Client.sln
Game/Client/CEGUIFalagardEx/: CEGUIFalagardEx.vcproj  CEGUIFalagardEx.vcxproj  CEGUIFalagardEx.vcxproj.filters  CEGUIFalagardEx_VC8.vcproj  FalActionButton.cpp  FalActionButton.h  FalActionButtonProperties.cpp  FalActionButtonProperties.h  FalAnimateProperties.cpp  FalAnimateProperties.h  FalBoundWindow.cpp  FalBoundWindow.h  FalBoundWindowProperties.cpp  FalBoundWindowProperties.h  FalChatBoard.cpp  FalChatBoard.h  FalChatBoardProperties.cpp  FalChatBoardProperties.h  FalChatChannel.cpp  FalChatChannel.h  FalChatChannelProperties.cpp  FalChatChannelProperties.h  FalChatHistory.cpp  FalChatHistory.h  FalChatHistoryProperties.cpp  FalChatHistoryProperties.h  FalChatProperties.cpp  FalChatProperties.h  FalCreatureBoard.cpp  FalCreatureBoard.h  FalCreatureBoardProperties.cpp  FalCreatureBoardProperties.h  FalDragTitle.cpp  FalDragTitle.h  FalDragTitleProperties.cpp  FalDragTitleProperties.h  FalIMEEditBox.cpp  (+90 more)
Game/OGRE/: OGRE.pc.in  Ogre.workspace  acinclude.m4  configure.in
Game/Opcode/: Opcode.h
Game/SceneEdit/: FairyEditor.sln  FairyEditor.vcproj  FairyEditor_VC8.sln  FairyEditor_VC8.vcproj  SceneEditor.vcproj  SceneEditor_VC8.vcproj
Game/SndShell/: GMSoundBuffer.cpp  GMSoundBuffer.h  GMSoundLister.cpp  GMSoundLister.h  GMSoundSource.cpp  GMSoundSource.h  GMSoundSystem.cpp  GMSoundSystem.h  SSBaseDefine.h  SndShell.cpp  SndShell.def  SndShell.h  SndShell.rc  SndShell.vcproj  SndShell_VC8.vcproj  TLBB_DBC.cpp  TLBB_DBC.h  resource.h  stdafx.cpp  stdafx.h
Game/Xerces/: version.incl
Game/fmodapi/: README.TXT
Game/tinyxml/: tinyXmlTest.vcproj  tinyXmlTestSTL.vcproj  tinyxml.sln  tinyxmlSTL.vcproj  tinyxml_lib.vcproj  xmltest.cpp
Game/zlib/: compress.c  deflate.h  example.c  gzio.c  uncompr.c
Game/zziplib/: ChangeLog  Makefile.am  Makefile.in  Makefile.mk  README  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  zziplib.spec
Game/zziplib/SDL/: Makefile.in  zzip-sdl-rwops.pc
Game/zziplib/bins/: Makefile.am  Makefile.in  zzip-config.in  zziplib.m4  zziptest.c  zzobfuscated.c  zzxordir.c
Game/zziplib/docs/: Makefile.am  Makefile.in  htmpages.ar  manpages.ar  staticlink.txt  zzip-doc.php  zzip-doc.pl
Game/zziplib/msvc6/: zzip.dsp  zziplib.dsp
Game/zziplib/msvc7/: zzcat.vcproj  zzdir.vcproj  zzip.sln  zzip.vcproj  zziplib.sln  zziplib.vcproj  zzipself.vcproj  zzipsetstub.vcproj  zziptest.vcproj  zzobfuscated.vcproj
Game/zziplib/test/: Makefile.am  Makefile.in
Game/zziplib/zzip/: stdint.h
Game/zziplib/zziplib/: Makefile.am  Makefile.in  README  README.MSVC6  SDL_rwops_zzip.c  TODO  __debug.h  __dirent.h  __hints.h  __mmap.h  acinclude.m4  config.h.in  configure  configure.ac  zzcat.c  zzcat.dsp  zzdir.c  zzdir.dsp  zzip-config.h  zzip-dir.c  zzip-file.c  zzip-msvc.h  zzip-msvc.sed  zzip-plugin.h  zzip-stat.c  zzip-zip.c  zziplib.dsp  zziplib.dsw  zziplib.spec  zziplib.vcproj  zziplib_DLL.dsp  zziptest.c  zziptest.dsp  zzipwrap-mem.c  zzipwrap.c  zzipwrap.dsp  zzipwrap.h  zzobfuscated.c  zzobfuscated.dsp  zzxorcat.c  (+1 more)
Game/zziplib/zzipwrap/: Makefile.in  wrap.c  zzipwrap.pc
Server/: Server.sln
Server/Common/: Assertx.cpp  BaseType.h  BuffImpactMgr.cpp  BuffImpactMgr.h  CampDataMgr.cpp  Chain.cpp  Chain.h  DirectlyImpactMgr.cpp  DirectlyImpactMgr.h  GameDefine2.h  GameDefine_Guild.h  GameDefine_Item.h  GameDefine_Result.h  GameStruct.cpp  GameStruct_City.h  GameStruct_Finger.h  GameStruct_Guild.h  GameStruct_Item.h  GameStruct_Relation.cpp  GameStruct_Relation.h  GameStruct_Scene.h  GameStruct_Team.h  PacketFactory.h  PacketFactoryManager.h  Rand.cpp  ScriptCommandStruct.cpp  ScriptCommandStruct.h  ShareMemAPI.cpp  SkillDataMgr.h  Type.h
Server/Server/: .gitignore
(+5919 files in other folders)
